# deep-river

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  check.ipynb  dev.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  spielwiese.py  test_estimators.py
.github/workflows/: coverage.yml  main.yml  mkdocs.yml  pypi-publish.yml  python-app.yml  python-publish.yml  unit-tests.yml  unit-tests1.yml  unit_tests.yml
DeepRiver/: __init__.py  base.py
DeepRiver/anomaly/: __init__.py  anomaly.py  nn_builder.py  postprocessing.py
DeepRiver/classification/: __init__.py  classifier.py  nn_builder.py
DeepRiver/datasets/: __init__.py  covertype.py  mnist.py
DeepRiver/regression/: __init__.py  nn_builder.py  regressor.py
DeepRiver/utils/: __init__.py  estimator_checks.py  layers.py  module_finder.py  optim.py
IncrementalTorch/: __init__.py  __version__.py  base.py  utils.py
IncrementalTorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
IncrementalTorch/anomaly/: __init__.py  anomaly.py  nn_builder.py  nn_function.py  postprocessing.py  util.py  utils.py
IncrementalTorch/classification/: __init__.py  classifier.py  nn_builder.py  nn_function.py
IncrementalTorch/datasets/: __init__.py  base.py  covertype.py  make_mnist.ipynb  mnist.py  shuttle.py
IncrementalTorch/nn_functions/: anomaly.py  classification.py  regression.py
IncrementalTorch/regression/: __init__.py  nn_builder.py  nn_function.py  regressor.py
IncrementalTorch/utils/: __init__.py  estimator_checks.py  eval.py  incremental_stats.py  layers.py  module_finder.py  optim.py  river_compat.py
benchmarks/: binary_classification.csv  config.py  details.json  index.html  multiclass_classification.csv  regression.csv  render.py  run.py  tracks.py
benchmarks/model_zoo/: torch.py
deep_river/: __init__.py  __version__.py  base.py
deep_river/anomaly/: __init__.py  ae.py  probability_weighted_ae.py  rolling_ae.py  scaler.py
deep_river/classification/: __init__.py  classifier.py  rolling_classifier.py  zoo.py
deep_river/preprocessing/: __init__.py  embedding.py  zoo.py
deep_river/regression/: __init__.py  multioutput.py  regressor.py  rolling_regressor.py  zoo.py
deep_river/timeseries/: __init__.py  base.py
deep_river/utils/: __init__.py  estimator_checks.py  inspect.py  layer_adaptation.py  params.py  tensor_conversion.py  test_estimators.py  test_layer_adaptation.py  test_tensor_conversion.py
docs/: .pages  about.md  anomaly.md  classification.md  code_reference.md  gen_ref_pages.py  getting_started.md  index.md  installation.md  introduction.md  online_classifier.md  online_regressor.md  regression.md
docs/benchmarks/: binary_classification.csv  config.py  details.json  index.md  multiclass_classification.csv  regression.csv
docs/benchmarks/model_zoo/: torch.py
docs/examples/: .pages  Autoencoder.ipynb  Regression.ipynb  example_ae.ipynb  example_autoencoder.ipynb  example_classification.ipynb  example_regression.ipynb
docs/examples/anomaly/: example_autoencoder.ipynb  example_autoencoder.md  example_lstm_autoencoder.ipynb  example_lstm_autoencoder.md  example_probability_weighted_autoencoder.ipynb  example_probability_weighted_autoencoder.md
docs/examples/catastrophic_forgetting/: label_shift.ipynb  label_shift.md  real_world_exmpl.ipynb  real_world_exmpl.md  recurring_concepts.ipynb  recurring_concepts.md
docs/examples/classification/: catastrophic_forgetting.ipynb  example_classification.ipynb  example_classification.md  example_lstm_classification.ipynb  example_mini_batches.ipynb  example_mini_batches.md  example_rnn_classification.ipynb  example_rnn_classification.md
docs/examples/model_loading/: example_load_model.ipynb
docs/examples/model_persistence/: .pages  README.md  model_persistence_demo.ipynb
docs/examples/preprocessing/: example_embedding_transformer.ipynb
docs/examples/regression/: bike-sharing-forecasting.ipynb  bike-sharing-forecasting.md  example_bike_sharing_forecasting.ipynb  example_lstm_regression.ipynb  example_mini_batches.ipynb  example_mini_batches.md  example_regression.ipynb  example_regression.md  example_rnn_regression.ipynb  example_rnn_regression.md  example_simple_nowcasting.ipynb  example_transformer.md
docs/overrides/: home.html  main.html
docs/overrides/stylesheets/: extra.css
docs/scripts/: gen_ref_pages.py
docs/stylesheets/: extra.css
examples/: evaluation_lstm_torch_classifier.py  evaluation_window_size_classifier.py  example_ae.ipynb  example_classification.ipynb  example_classification.py  example_keras.ipynb  example_lstm_torch_regressor.py  example_regression.ipynb  example_regression.py  example_torch.ipynb  example_torch_lstm.ipynb  spielwiese.ipynb
examples/anomaly/example_autoencoder/: example_autoencoder.ipynb  index.html
examples/anomaly/example_lstm_autoencoder/: example_lstm_autoencoder.ipynb  index.html
examples/model_persistence/: index.html
getting_started/: index.html
overrides/: home.html
paper/: classes.dot  compile.sh  packages.dot  paper.bib  paper.md
reference/SUMMARY/: index.html
reference/base/: index.html
reference/params/: index.html
reference/tensor_conversion/: index.html
river_torch/: __version__.py  base.py
river_torch/anomaly/: __init__.py  ae.py  anomaly.py  base.py  calibration.py  dropout_ae.py  nn_builder.py  postprocessing.py  probability_weighted_ae.py  rolling_ae.py  scaler.py  variational_ae.py
river_torch/classification/: __init__.py  classifier.py  nn_builder.py  rolling_classifier.py
river_torch/datasets/: __init__.py  mnist.py
river_torch/regression/: __init__.py  nn_builder.py  regressor.py  rolling_regressor.py
river_torch/utils/: __init__.py  estimator_checks.py  hooks.py  layer_adaptation.py  layers.py  module_finder.py  optim.py  params.py  river_compat.py  tensor_conversion.py  test_estimators.py  test_layer_adaptation.py  test_tensor_conversion.py
scripts/: gen_ref_pages.py
search/: search_index.json
(+41 files in other folders)
