[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_river"
description = "Online Deep Learning for river"
authors = [
    {name = "Cedric Kulbach", email = "cedric.kulbach@googlemail.com"},
    {name = "Lucas Cazzonelli", email = "Cazzonelli@fzi.de"},
    {name = "Hoang-Anh Ngo", email = "hoang-anh.ngo@alumni.polytechnique.org"},
    {name = "Max Halford", email = "maxhalford25@gmail.com"},
    {name = "Saulo Martiello Mastelini", email = "saulomastelini@gmail.com"},
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["online-learning", "deep-learning", "data-streams"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "scikit-learn~=1.5.0",
    "torch==2.2.2",
    "pandas~=2.2.2",
    "numpy~=1.26.4",
    "river",
    "tqdm~=4.66.5",
    "torchviz~=0.0.2",
    "mkdocstrings[python]>=0.19.0",
    "pytkdocs[numpy-style]>=0.5.0",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/online-ml/deep-river"
Repository = "https://github.com/online-ml/deep-river"
Documentation = "https://github.com/online-ml/deep-river"

[project.optional-dependencies]
dev = [
    "graphviz>=0.20.3",
    "matplotlib>=3.9.2",
    "mypy>=1.11.1",
    "codecov>=2.1.13",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "jupyter>=1.0.0",
    "pyupgrade==3.17.0",
    "flask>=3.0.2",
    "ipykernel>=6.9.0",
    "mike>=0.5.3",
    "mkdocs>=1.2.3",
    "mkdocs-awesome-pages-plugin>=2.7.0",
    "mkdocs-gen-files>=0.3.5",
    "mkdocs-charts-plugin>=0.0.8",
    "mkdocs-literate-nav>=0.4.1",
    "mkdocs-material>=8.1.11",
    "ipython_genutils>=0.1.0",
    "mkdocs-jupyter>=0.20.0",
    "nbconvert>=6.4.2",
    "jupyter_contrib_nbextensions==0.7.0",
    "numpydoc>=1.2",
    "notebook==6.4.3",
    "spacy>=3.2.2",
    "jinja2>=3.0.3",
    "dominate",
    "jupyter-client",
    "python-slugify",
    "watermark==2.3.1",
    "plotly>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["deep_river*"]
exclude = ["site*", "paper*"]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='README.md' -q"
testpaths = ["deep_river", "README.md"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dominate>=2.9.1",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.16",
    "mypy>=1.17.0",
    "plotly>=6.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyupgrade>=3.17.0",
    "watermark>=2.3.1",
]

[tool.setuptools_scm]
# Optional: you can customize here. Keeping defaults uses Git tags as the single source of truth.
# fallback_version = "0.0.0"
