[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_river"
version = "0.3.2"
description = "Online Deep Learning for river"
authors = [
    {name = "Cedric Kulbach", email = "cedric.kulbach@googlemail.com"},
    {name = "Lucas Cazzonelli", email = "Cazzonelli@fzi.de"},
    {name = "Hoang-Anh Ngo", email = "hoang-anh.ngo@alumni.polytechnique.org"},
    {name = "Max Halford", email = "maxhalford25@gmail.com"},
    {name = "Saulo Martiello Mastelini", email = "saulomastelini@gmail.com"},
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["online-learning", "deep-learning", "data-streams"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "river",
    "scikit-learn~=1.5.0",
    "sortedcontainers>=2.4.0",
    "torch==2.2.2",
    "tqdm~=4.66.5",
    "torchviz~=0.0.2",
]

[project.urls]
Homepage = "https://github.com/online-ml/deep-river"
Repository = "https://github.com/online-ml/deep-river"
Documentation = "https://github.com/online-ml/deep-river"


[tool.setuptools.packages.find]
include = ["deep_river*"]
exclude = ["site*", "paper*"]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='README.md' -q"
testpaths = ["deep_river", "README.md"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "codecov>=2.1.13",
    "dominate>=2.9.1",
    "flake8>=7.3.0",
    "graphviz>=0.20.3",
    "isort>=6.0.1",
    "ipykernel>=6.9.0,<7.0.0",
    "jinja2>=3.0.3",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyter-client>=7.0.0",
    "matplotlib>=3.9.2",
    "mike>=0.5.3",
    "mkdocs>=1.6.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.19.0",
    "mypy>=1.17.0",
    "nbconvert>=7.0.0",
    "numpydoc>=1.2",
    "plotly>=6.3.0",
    "pre-commit>=4.2.0",
    "pytkdocs[numpy-style]>=0.5.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyupgrade>=3.17.0",
    "spacy>=3.2.2",
    "tabulate>=0.9.0",
    "watermark>=2.3.1",
]

